# Robot_Programming

lab01-assignment/: run_docker.sh
lab02-assignment/: run_docker.sh
lab02-assignment/install/: local_setup.sh  setup.sh
lab02-assignment/src/my_py_pkg/my_python_pkg/: helloworld.py
lab03-assignment/: run_docker.sh
lab03-assignment/TCP UDP/: tcp_client  tcp_server  tcp_server.cpp  udp_client  udp_server
lab03-assignment/src/cpp_pubsub/: CMakeLists.txt  package.xml
lab03-assignment/src/cpp_pubsub/src/: subscriber_lambda_function.cpp  talker.cpp
lab03-assignment/src/py_pubsub/: package.xml  setup.py
lab03-assignment/src/tcp_udp_sender/: CMakeLists.txt  package.xml
lab03-assignment/src/topic_generator/: CMakeLists.txt  package.xml
lab03-assignment/src/topic_listener/: CMakeLists.txt  package.xml
lab04-assignment/: run_docker.sh
lab04-assignment/docker/: Dockerfile
lab04-assignment/src/cpp_srvcli/: package.xml
lab04-assignment/src/py_srvcli/: package.xml  setup.py
lab05-assignment/: run_docker.sh
lab05-assignment/src/cafe_customer/: package.xml  setup.cfg  setup.py
lab05-assignment/src/cafe_interfaces/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lab05-assignment/src/cafe_interfaces/action/: DeliverOrder.action  MakeDrink.action
lab05-assignment/src/cafe_interfaces/msg/: MenuItem.msg  RobotStatus.msg
lab05-assignment/src/cafe_interfaces/srv/: CancelOrder.srv  CheckPrice.srv  GetMenu.srv
lab05-assignment/src/cafe_manager/: package.xml  setup.cfg  setup.py
lab05-assignment/src/cafe_robot/: package.xml  setup.py
lab06-assignment/: assignment_6.urdf.xacro  run_docker.sh
lab07-assignment/: run_docker.sh
lab07-assignment/docker/: Dockerfile
lab07-assignment/simulation/: CMakeLists.txt  package.xml
lab07-assignment/simulation/configs/: bridge.yaml  server.config
lab07-assignment/simulation/launch/: simulation.launch.py
lab07-assignment/simulation/src/: camera_viewer.cpp
lab07-assignment/simulation/urdf/: my_rover.urdf.xacro
(+12 files in other folders)
